WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23279
[GTK] fix crash after WebView dispose
https://bugs.webkit.org/show_bug.cgi?id=23279
Summary
[GTK] fix crash after WebView dispose
Alexander Butenko
Reported
2009-01-12 15:53:30 PST
Bug is related to #23194. The WebCore::Page is deleted by the dispose implementation and webkit_web_view_set_scroll_adjustments() doesn't check is Page still exist. Mischeck leads to a crash sometimes.
Attachments
patch
(1.03 KB, patch)
2009-01-12 15:58 PST
,
Alexander Butenko
zecke
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Butenko
Comment 1
2009-01-12 15:58:24 PST
Created
attachment 26653
[details]
patch
Holger Freyther
Comment 2
2009-01-13 03:35:45 PST
Looks good. I have this as well: @@ -883,6 +887,9 @@ static gboolean webkit_navigation_request_handled(GSignalInvocationHint* ihint, static AtkObject* webkit_web_view_get_accessible(GtkWidget* widget) { WebKitWebView* webView = WEBKIT_WEB_VIEW(widget); + if (!core(webView)) + return NULL; +
Holger Freyther
Comment 3
2009-01-13 06:29:11 PST
Comment on
attachment 26653
[details]
patch I will land this with the atk hunk from the comments. there was mutual agreement on #webkit-gtk on this issue.
Holger Freyther
Comment 4
2009-01-13 11:57:47 PST
Landed in
r39855
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug