2009-01-13  Alexander V. Butenko  <alex@digiqube.com>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=23279

        Fix crash on WebView dispose stage.

        Add null checks to webkit_web_view_set_scroll_adjustments  and
        webkit_web_view_get_accessible as they get called from within
        the dispose.

        * webkit/webkitwebview.cpp:

Canonical link: https://commits.webkit.org/32053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39855 268f45cc-cd09-0410-ab3c-d52691b4dbfc